# LionelChallenge

./: .gitignore  README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js
client/src/main-app/: main-app-component.jsx  main-app-component.scss
client/src/main-app/pages/complaint-page/: complaint-page-component.jsx  complaint-page-component.scss
client/src/main-app/pages/complaints-map/: complaints-map-component.jsx  complaints-map-component.scss
client/src/main-app/pages/instructions-page/: instructions-page-component.jsx  instructions-page-component.scss
client/src/main-app/pages/welcome-page/: welcome-page-component.jsx  (+1 more)
client/src/services/: api-service.js  complaints-api-service.js  url-service.js
client/src/system/button/: button-component.jsx  button-component.scss
client/src/system/navigate-back/: navigate-back-component.jsx  navigate-back-component.scss
client/src/system/text-field/: text-field-component.jsx
server/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
server/authentification/: views.py
server/authentification/migrations/: 0001_initial.py
server/complaint/: admin.py  models.py  serializers.py  views.py
server/complaint/migrations/: 0001_initial.py  0002_comment.py  0002_rename_cp_complaint_postal_code.py  0003_complaint_picture.py  0004_complaint_location.py  0005_alter_complaint_location.py
server/core/: api.py  settings.py  urls.py
server/user/: admin.py  serializers.py  views.py
server/user/migrations/: 0001_initial.py
(+3 files in other folders)
